# mlir-out-of-tree-dialect

./: .gitignore  ReadMe.md
codes-of-toy/: example_2.toy  example_5.toy  example_6.toy  example_7.toy
standalone/: ReadMe.md  build-proj.sh
toy/Ch1/: CMakeLists.txt  ReadMe.md  build-proj.sh
toy/Ch2/: CMakeLists.txt  ReadMe.md
toy/Ch3/: CMakeLists.txt  ReadMe.md  run.sh
toy/Ch3/include/toy/: CMakeLists.txt
toy/Ch4/: CMakeLists.txt  ReadMe.md  run.sh
toy/Ch4/include/toy/: CMakeLists.txt
toy/Ch4/mlir/: ToyCombine.cpp
toy/Ch5/: CMakeLists.txt  ReadMe.md  build-proj.sh  run.sh
toy/Ch5/include/toy/: CMakeLists.txt
toy/Ch5/mlir/: ToyCombine.cpp
toy/Ch6/: CMakeLists.txt  ReadMe.md  run.sh
toy/Ch6/include/toy/: CMakeLists.txt
toy/Ch7/: CMakeLists.txt  ReadMe.md  build-proj.sh  run.sh
toy/Ch7/include/toy/: CMakeLists.txt
toy/Ch7/mlir/: ToyCombine.cpp
